# ori.index.raylib

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  install.sh  raylib-flow.sh  use-raylib-flow.sh
.zely/cmake/: findraylib.cmake
module/use-raylib/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt
module/use-raylib/source/: use-raylib.cpp
use-ray-lib/: CMakeLists.txt
